css/media-queries.css
/* =========================================================
   media-queries.css
   Responsive adjustments:
   - mobile, tablet, desktop
   - overrides for layout or components
   - adaptive font sizes and spacing
========================================================= */


 @media (max-width: 900px) {
  .meal-cell {
    font-size: 0.8rem;
  }
  #weekly-menu thead th,
  #weekly-menu tbody td:first-child {
    font-size: 0.9rem;
  }
  #section-list{
    padding-top: 8rem;
  }
  #shoppingList li,
  #manualList li {
        
    padding-left: 0;     
   
  }
 
}

@media (max-width: 600px){
  .meal-cell {
    font-size: 0.7rem;
  }
  #weekly-menu thead th,
  #weekly-menu tbody td:first-child {
    font-size: 0.8rem;
  }

   #recipes-list{
      grid-template-columns: 1fr !important;
   }
   #recipes-list .recipes-list-class {
      font-size: 0.875rem; 
    }
    /* form */
    #difficulty-level{
      display: inline-block;
      font-size: 10px;
    }
    #difficulty-level legend{
      font-size: 1.2rem;
    }
    #prep-time, #recipe-category{
      width: 100%;
    }
    #quantity-input{
      width: 48%;
    }
    #measure-select{
      width: 50%;
    }
    #ingredient-input{
      width: 70%;
    }
    #instructions-input{
      width: 70%;
    }
  #second-search-buttons{
    display: flex;
    justify-content: center;
    margin-left: 18%;
    gap: 1rem;
  }
  /* recipe list */
 
  #section-list h1 {
    margin-top: 2rem;
    font-size: 1.5rem;
  }

  /* More compact cards */
  #recipes-list .recipes-list-class {
    gap: 1rem;
    height: 8rem; 
    padding: 0.5rem;
  }

  /* smaller imagen */
  .recipe-thumb {
    width: 4rem;
    height: 4rem;
  }

  /* Compact text */
  .recipe-text h3 {
    font-size: 0.9rem;
    -webkit-line-clamp: 2;
  }

  .recipe-text p {
    font-size: 10px;
  }
  #page-info{
    font-size: 0.7rem;
  }
  #buttons-list{
    margin-top: 0;
    gap:0.3rem;
  }

  /* shopping list */
  #shoppingList,
  #manualList {
    column-count: 1;  
  }
  #manualQty{
    width: 40%;
  }
  #manualMeasure{
    width: 50%;
  }
  #manualName{
    width: 65%;
  }
  #manual-ingredient-form{
    flex-wrap:wrap;
  }

  
}



@media (hover: hover) and (pointer: fine) {
   #recipes-list .recipes-list-class:hover {
     transform: translateY(-5px);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   }
 }

/*!-- Navbar --*/

 @media (max-width: 900px) {
  .navbar{
    padding-left: 1rem;
  }
  header h1 {
    text-align: left;      
    white-space: nowrap;  
    overflow: hidden; 
    margin: 0;
   }
   .hamburger {
     display: block;
     position:relative;
     margin-top: 1rem;
     left: 4rem;
     z-index: 1100; 
   }
 
   .navbar-container {
     display: none;
     position: absolute;
     top: 100%; 
     width: 50%;
     right: 0; 
     background:var(--color-bg-hamburguer);
   }
 
   .navbar-container ul {
     flex-direction: column;
     align-items:center;     
     padding: 1rem 0;
   }

   .navbar-container.active {
     display: block;
     margin-top: 1rem;
     padding-top: 1rem;
   }
 }

 /* hover effects for fine pointers */
@media (hover: hover) and (pointer: fine){
  /* recipes*/
  #recipes-list .recipes-list-class:hover {
    transform: translateY(-5px) scale(1.02);
    box-shadow: 0 10px 25px rgba(0,0,0,0.2); 
    background-color: var(--color-bg-paper); 
  }
  /* table */
  .meal-cell:hover {
    background: var(--color-secondary);
    transform: scale(1.02);
  } 
  /* utilities */
  .btn-main:hover{
    background-color: var(--color-main-btn);
    color: var(--color-surface);
 }
 
 .btn-cancel:hover{
    background-color: var(--color-neutral-btn);
    color: var(--color-surface);
    }
 
 .btn-delete:hover{
    background-color: var(--color-delete-btn);
    color: var(--color-surface);
    }
 
 .btn-export-import:hover{
    background-color: var(--color-export-import-btn);
    color: var(--color-surface);
    
 }
  /* components */
  /* form*/
  select.input-base:hover {
    border-color: var(--color-accent);
    background-color: var(--color-bg-paper);
  }
  .btn-remove-item:hover,
  .btn-edit-item:hover {
    transform: scale(1.15);
  }
  .btn-remove-item:hover::after,
  .btn-edit-item:hover::after {
    opacity: 1;
  }
  #filter-box label:hover {
    color: var(--color-title);
  }

  /* modals*/
  #modal-menu-list button:hover {
    color: var(--color-accent);  
    transform: scale(1.15);              
  }

  #modal-recipes-list .recipes-list-class:hover {
    background-color: var(--color-primary);
    color: var(--color-bg-paper); 
    cursor: pointer;
  }
  /* shopping list */
  #shopping-list-recipes:hover,
#shopping-list-others:hover {
  transform: translateY(-3px);
  box-shadow: 4px 6px 12px rgba(0,0,0,0.25);
}
}

